Fix padding and styling issues + scroll on table overflow

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/core/_tables.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/core/_tables.sass
@@ -1,5 +1,11 @@
 .g-table-master
     @include px(3)
+    overflow-x: scroll
+    &::-webkit-scrollbar-thumb
+        background: $c-orange
+        border-radius: 5px
+    &::-webkit-scrollbar 
+        height: 3px
     table 
         border-collapse: collapse
         text-align: left
@@ -22,9 +28,14 @@
         &.fund-holdings
             td:last-child
                 text-align: right
+            tbody
+                th,td
+                    @include px(3)
         tbody     
             th, td 
                 font-weight: 400 
+                @include px(3)
+
             tr
                 &:first-child, 
                     td, th
@@ -71,14 +82,13 @@
                 &:nth-child(odd)
                     background: $c-whisper
                 td,th
-                    @include px(4)
+                    @include px(3)
                     @include py(3)
     .divident-table,.performance-table
         thead
             th
                 text-align: center
-            span
-                @include px(4)
+                white-space: break-spaces
         tr
             &:first-child
                 td, th
@@ -95,7 +105,7 @@
                 &:first-child
                     text-align: left
                     white-space: nowrap
-                    @include pl(4)
+                    @include pl(3)
                 p
                     margin: unset
     .performance-table
@@ -161,13 +171,3 @@
     tbody
          tr:nth-child(n+11)
             display: none
-.table-responsive-lg
-    overflow-x: scroll
-    &::-webkit-scrollbar-track
-        background: $c-silver
-        border-radius: 5px
-    &::-webkit-scrollbar-thumb
-        background: $c-orange
-        border-radius: 5px
-    &::-webkit-scrollbar 
-        height: 3px
